--- a/tika-parent/pom.xml
+++ b/tika-parent/pom.xml
@@ -1110,6 +1110,22 @@
           </execution>
         </executions>
       </plugin>
+
+<!--      <plugin>-->
+<!--        <groupId>com.biarum</groupId>-->
+<!--        <artifactId>tika-security-maven-plugin</artifactId>-->
+<!--        <version>1.0.0</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <phase>package</phase>-->
+<!--            <goals>-->
+<!--              <goal>secure-tika</goal>-->
+<!--            </goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
+
+
       <plugin>
         <groupId>de.thetaphi</groupId>
         <artifactId>forbiddenapis</artifactId>
